# intel-fpga-bbb

./: .gitignore  .pylintrc  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  COPYING  README.md
.github/: CODEOWNERS
.github/workflows/: python-static-analysis.yml
BBB_cci_gemm/: AUTHORS
BBB_cci_gemm/base/hw/: base_addenda.txt  setup_ase_sim.py
BBB_cci_gemm/base/sw/: Makefile  base_include.mk  opae_svc_wrapper.cpp
BBB_cci_gemm/hw/par/: bdw_503_pr_afu.qsf  bdw_503_pr_afu_synth.qsf  gemm_config.qsf  source_gemm_PAR_files.qsf
BBB_cci_gemm/hw/rtl/: README
BBB_cci_gemm/hw/rtl/drain_modules/: fxd_rnd_trunc.sv  fxd_rnd_trunc_tb.sv  relu.sv
BBB_cci_gemm/hw/rtl/feeders/: feeders.sv
BBB_cci_gemm/hw/rtl/pe/: nBit_mLength_shiftRegister.sv  pe.sv  pe_control.sv  pe_datapath.sv  pe_packer.sv  pe_tb.sv  shiftReg.sv
BBB_cci_gemm/hw/rtl/qsys_ip/: feeder_ram_512_256.v  feeder_ram_512_256_ram_2port_151_i4icjwq.v  lpbk1_RdRspRAM2PORT.v  lpbk1_RdRspRAM2PORT_ram_2port_151_davj2sq.v  pe_out_fifo.v  pe_out_fifo_fifo_150_hoj3y4a.v  req_C1TxRAM2PORT.v  req_C1TxRAM2PORT_ram_2port_151_t3axzby.v  req_C1TxRAM2PORT_ram_2port_151_xaxn5ri.v
BBB_cci_gemm/hw/rtl/top/: ccip_interface_reg.sv  ccip_std_afu.sv  gemm_arb.sv  gemm_csr.sv  gemm_ctl.sv  gemm_mod.sv  gemm_perf_dbg.sv  gemm_top.sv  nlb_C1Tx_fifo.v  nlb_gram_sdp.v  requestor.sv
BBB_cci_gemm/hw/sim/: setup_ase.sh  source.txt  sources.txt
BBB_cci_gemm/sw/lib/: Makefile  gemmALIVTP.hpp  gemmHelper.cpp  gemmHelper.hpp  gemmLib.cpp  gemmLib.hpp  gemmRunner.cpp  gemmRunner.hpp  opaeMPFGEMM.hpp
BBB_cci_gemm/sw/sample/: Makefile  gemm.cpp  gemm.h
BBB_cci_gemm/val/: README  testlib.py  validate.py
BBB_cci_gemm/val/data/: alexnet.csv  inception-v1.csv  inception-v4.csv  random.csv
BBB_cci_mpf/hw/par/: qsf_cci_mpf_PAR_files.qsf
BBB_cci_mpf/hw/rtl/: cci_mpf.sv  cci_mpf_config.vh  cci_mpf_csrs.sv  cci_mpf_csrs.vh  cci_mpf_csrs_pkg.sv  cci_mpf_null.sv  cci_mpf_pipe_std.sv  cci_mpf_sources.txt
BBB_cci_mpf/hw/rtl/cci-if/: ccip_feature_list_pkg.sv  ccip_if_funcs_pkg.sv
BBB_cci_mpf/hw/rtl/cci-mpf-if/: cci_mpf_if.sv  cci_mpf_if.vh  cci_mpf_if_dbg.vh  cci_mpf_if_pkg.sv  cci_mpf_platform.vh  ccip_wires_to_mpf.sv  mpf_if_split_mmio.sv  mpf_if_to_ofs_plat_ccip.sv  ofs_plat_ccip_if_to_mpf.sv
BBB_cci_mpf/hw/rtl/cci-mpf-prims/: cci_mpf_prim_counter_multicycle.sv  cci_mpf_prim_fifo2.sv  cci_mpf_prim_fifo_bram.sv  cci_mpf_prim_fifo_lutram.sv  cci_mpf_prim_ram_dualport.sv  cci_mpf_prim_ram_simple.sv  (+5 more)
BBB_cci_mpf/hw/sim/: cci_mpf_sim_addenda.txt
BBB_cci_mpf/sw/: CMakeLists.txt
BBB_cci_mpf/sw/doc/: doxygen.cmake
BBB_cci_mpf/sw/src/: mpf.cmake
BBB_cci_mpf/sw/src_aal/: mpf_aal.cmake
BBB_ccip_async/hw/par/: ccip_async.sdc  ccip_async_addenda.qsf  sample_ccip_async_import.qsf
BBB_ccip_async/hw/rtl/: ccip_afifo_channel.sv  ccip_async_activity_cnt.sv  ccip_async_shim.sv
BBB_ccip_async/hw/sim/: ccip_async_sim_addenda.txt
BBB_ccip_async/samples/: async_nlb100.sv  async_nlb150.sv  async_nlb200.sv  async_nlb300.sv
BBB_ccip_avmm/hw/rtl/: avmm_ccip_host_rd.sv  ccip_avmm_mmio.sv  ccip_avmm_pkg.sv
BBB_ccip_avmm/sw/: Makefile
BBB_ccip_mux/: RELEASE_NOTES
BBB_ccip_mux/hw/par/: ccip_mux.qsf
BBB_ccip_mux/hw/rtl/: a10_ram_sdp_wysiwyg.v  ccip_front_end.sv  ccip_if_pkg.sv  ccip_intf_regs.sv  ccip_mux.sv  fair_arbiter.sv  gram_sdp.v  sync_C1Tx_fifo.v  vendor_defines.vh
BBB_ccip_mux/hw/sim/: mux_simfiles.list
BBB_ccip_mux/samples/hw/: ReadMe.txt  ccip_std_afu.sv  nlb_csr.sv
BBB_ccip_mux/samples/sw/: README  hello_fpga_mux.c
BBB_mpf_vtp/hw/rtl/: mpf_vtp_sources.txt
BBB_mpf_vtp/tests/sw/: .gitignore  Makefile  main.c  test_host_chan_vtp.c  test_host_chan_vtp.h
cmake/modules/: BBB.cmake  compiler_config.cmake
drivers/: .gitignore
drivers/fpga_near_mem_map/: Makefile  fpga_near_mem_map.c  fpga_near_mem_map.h
drivers/fpga_near_mem_map/lib/: CMakeLists.txt
drivers/fpga_near_mem_map/lib/cmake/modules/: FindNuma.cmake
drivers/fpga_near_mem_map/lib/include/opae/: fpga_near_mem_map.h
drivers/fpga_near_mem_map/lib/src/: page_info.c
drivers/fpga_near_mem_map/test/: test_basic.c
drivers/fpga_vtp_mapper/: Makefile  fpga_vtp_mapper.c  fpga_vtp_mapper.h
drivers/fpga_vtp_mapper/lib/: CMakeLists.txt
drivers/fpga_vtp_mapper/lib/include/opae/: fpga_vtp_mapper.h
drivers/fpga_vtp_mapper/lib/src/: page_info.c
drivers/fpga_vtp_mapper/test/: Makefile  test_basic.c
drivers/mmu_monitor/: Makefile  README  mmu_monitor.c  mmu_monitor.h
drivers/mmu_monitor/test/: test_basic.c
platform-ifc-mgr-compat/: README.md
platform-ifc-mgr-compat/SR-5.0.3-Release/: install.sh
platform-ifc-mgr-compat/SR-5.0.3-Release/files/: bdw_user_clocks.sdc  green_top.sv  run.sh
platform-ifc-mgr-compat/SR-6.3.0/: README.md  install.sh
platform-ifc-mgr-compat/SR-6.3.0/files/: green_bs.sv  green_hssi_if_e10_null.sv  run.sh  skx_bbs_e10.sdc  skx_user_clocks.sdc
platform-ifc-mgr-compat/SR-6.4.0/: README.md  install.sh
platform-ifc-mgr-compat/SR-6.4.0/files/: green_bs.sv  run.sh  skx_user_clocks.sdc
platform-ifc-mgr-compat/a10_gx_pac_ias_1_0/: README.md  install.sh
platform-ifc-mgr-compat/a10_gx_pac_ias_1_0/files/: run.sh
platform-ifc-mgr-compat/dcp_1.0/: README.md  install.sh
platform-ifc-mgr-compat/dcp_1.0/files/: run.sh
platform-ifc-mgr-compat/dcp_1_0_beta/files/: dcp_user_clocks.sdc  run.sh
samples/: README.md
samples/platform-db-setup/: README.md
samples/platform-db-setup/SR-5.0.3-Release/: README.md  install.sh
samples/platform-db-setup/SR-6.3.0/: install.sh
samples/platform-db-setup/dcp_1_0_beta/: install.sh
samples/tutorial/: README  README.md
samples/tutorial/01_hello_world/: README  README.md
samples/tutorial/02_clocks/: README.md
samples/tutorial/02_hello_world_mpf/: README
samples/tutorial/02_platform_ifc/: README.md
samples/tutorial/03_ccip/: README.md
samples/tutorial/03_linked_list/: README
samples/tutorial/03_local_memory/: README.md
samples/tutorial/04_PIM/: README.md
samples/tutorial/04_local_memory/: README.md
samples/tutorial/afu_types/: README.md
samples/tutorial/scripts/: README  install.sh
(+418 files in other folders)
